central-station-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: central-station
  name: central-station
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: central-station
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/weather-station-weather-network: "true"
        io.kompose.service: central-station
    spec:
      containers:
        - image: central_station
          name: central-station
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: central-station-claim0
            - mountPath: /app/bitcaskDB
              name: central-station-claim1
      restartPolicy: Always
      volumes:
        - name: central-station-claim0
          persistentVolumeClaim:
            claimName: central-station-claim0
        - name: central-station-claim1
          persistentVolumeClaim:
            claimName: central-station-claim1
status: {}
